# clownfish

./: .gitignore  README.md  eslint.config.cjs  index.html  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.js
.github/workflows/: build-macos.yml  build-windows.yml  deploy-landing.yml  release.yml
landing/: next.config.ts  package.json  pnpm-lock.yaml  tsconfig.tsbuildinfo
landing/app/: globals.css  i18n.ts  layout.tsx  page.tsx
landing/app/components/: icons.tsx  reveal.tsx
landing/app/data/: symbols.ts
landing/app/lib/: hooks.ts  types.ts
landing/app/locales/: en.json  es.json  ja.json  ru.json
landing/app/privacy/: page.tsx
landing/app/sections/: download.tsx  features.tsx  footer.tsx  hero.tsx  how-it-works.tsx  navbar.tsx  support.tsx  who.tsx
landing/public/: robots.txt  sitemap.xml
src/: App.tsx  Settings.tsx  events.ts  i18n.ts  main.tsx  plugin-store.ts  stats-store.ts  store.ts  theme.css  theme.ts  types.ts
src-tauri/: Cargo.toml  build.rs  nsis-hooks.nsi  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: autostart.rs  backup.rs  hotkey.rs  lib.rs  main.rs  text_expand.rs  tray.rs  window.rs
src/app/: app.styles.ts  app.tsx
src/components/: Category.tsx  CharButton.tsx  SearchBar.tsx  Toast.tsx
src/components/autocorrect-panel/: autocorrect-panel.styles.ts  autocorrect-panel.tsx  index.ts
src/components/autocorrect-toggle/: autocorrect-toggle.tsx  index.ts
src/components/autostart-toggle/: autostart-toggle.styles.ts  autostart-toggle.tsx  index.ts
src/components/bottom-bar/: bottom-bar.d.ts  bottom-bar.styles.ts  bottom-bar.tsx  index.ts
src/components/category-chips/: category-chips.d.ts  category-chips.tsx  (+2 more)
src/data/: autocorrect-rules.ts  characters.ts  combining-marks.ts  gitmoji.ts  packs.ts  presets.ts  shortcuts.ts  translations.ts
src/hints/: hints.d.ts  hints.styles.ts  hints.tsx
src/settings/: settings.styles.ts  settings.tsx
src/utils/: char-match.ts  unicode-info.ts
(+91 files in other folders)
