[package]
name = "clownfish"
version = "1.2.0"
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [
	"tray-icon",
	"macos-private-api",
	"image-png",
] }
tauri-plugin-clipboard-manager = "2"
tauri-plugin-store = "2"
tauri-plugin-fs = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
open = "5.3.3"
tauri-plugin-autostart = "2"
tauri-plugin-global-shortcut = "2"
rdev = { version = "0.5", features = ["unstable_grab"] }
arboard = "3"
chrono = { version = "0.4", default-features = false, features = ["clock"] }

[target.'cfg(target_os = "windows")'.dependencies]
windows-sys = { version = "0.59", features = [
	"Win32_UI_Input_KeyboardAndMouse",
	"Win32_UI_WindowsAndMessaging",
	"Win32_Foundation",
	"Win32_Graphics_Gdi",
	"Win32_System_Threading",
	"Win32_System_LibraryLoader",
] }
windows = { version = "0.62", features = [
	"Win32_UI_Accessibility",
	"Win32_System_Com",
	"Win32_System_Ole",
	"Win32_System_Variant",
	"Win32_Foundation",
] }

[target.'cfg(target_os = "macos")'.dependencies]
objc2 = "0.6"
objc2-foundation = { version = "0.3", features = ["NSError"] }
objc2-service-management = { version = "0.3", features = ["SMAppService"] }
